--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -49,26 +49,26 @@
                 <div class="rail-label min">
                   0
                 </div>
-                <div class="rail" style="width: 300px;" title="Select a hotel price range between $0 and $400">
+                <div class="rail" style="width: 300px;">
                   <img id="minPriceHotel"
-                    src="images/min-arrow.png" 
-                    role="slider" 
-                    tabindex="0" 
-                    class="min thumb" 
-                    aria-valuemin="0" 
-                    aria-valuenow="100" 
+                    src="images/min-arrow.png"
+                    role="slider"
+                    tabindex="0"
+                    class="min thumb"
+                    aria-valuemin="0"
+                    aria-valuenow="100"
                     aria-valuetext="$100"
-                    aria-valuemax="400" 
+                    aria-valuemax="400"
                     aria-label="Hotel Minimum Price"/>
                   <img id="maxPriceHotel"
-                    src="images/max-arrow.png" 
-                    role="slider" 
-                    tabindex="0" 
-                    class="max thumb" 
-                    aria-valuemin="0" 
-                    aria-valuenow="250" 
+                    src="images/max-arrow.png"
+                    role="slider"
+                    tabindex="0"
+                    class="max thumb"
+                    aria-valuemin="0"
+                    aria-valuenow="250"
                     aria-valuenow="$250"
-                    aria-valuemax="400" 
+                    aria-valuemax="400"
                     aria-label="Hotel Maximum Price"/>
                 </div>
                 <div class="rail-label max">
@@ -80,24 +80,24 @@
               <div class="rail-label min">
                 0
               </div>
-              <div class="rail" style="width: 300px;" title="Select a flight price range between $0 and $1000">
-                <img src="images/min-arrow.png" 
-                    role="slider" tabindex="0" 
-                    class="min thumb" 
-                    aria-valuemin="0" 
-                    aria-valuenow="100" 
+              <div class="rail" style="width: 300px;">
+                <img src="images/min-arrow.png"
+                    role="slider" tabindex="0"
+                    class="min thumb"
+                    aria-valuemin="0"
+                    aria-valuenow="100"
                     aria-valuetext="$100"
-                    aria-valuemax="250" 
+                    aria-valuemax="250"
                     aria-label="Flight Minimum Price">
-                <img src="images/max-arrow.png" 
-                  role="slider" 
-                  tabindex="0" 
-                  class="max thumb" 
-                  aria-valuemin="0" 
-                  aria-valuenow="250" 
+                <img src="images/max-arrow.png"
+                  role="slider"
+                  tabindex="0"
+                  class="max thumb"
+                  aria-valuemin="0"
+                  aria-valuenow="250"
                   aria-valuenow="$250"
-                  aria-valuemax="1000" 
-                  aria-label="Flight Maximum Price">       
+                  aria-valuemax="1000"
+                  aria-label="Flight Maximum Price">
               </div>
               <div class="rail-label max">
                 0
@@ -243,7 +243,7 @@
         </tbody>
       </table>
     </section>
-    
+
   <section>
         <h2>Javascript and CSS Source Code</h2>
         <ul>
