--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -179,7 +179,7 @@
             </td>
             <td>
               <ul>
-                <li>Identifies the element as a slider and overrides the default role of <code>img</code>.</li>
+                <li>Identifies the <code>img</code> element as a "slider" and overrides the default role of "img".</li>
                 <li>Set on the the movable thumb because it is the operable element that receives focus and represents the slider value.</li>
               </ul>
             </td>
