--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -22,7 +22,7 @@
       <li><a href="https://github.com/w3c/aria-practices/projects/9">Related Issues</a></li>
       <li><a href="../../../#checkbox">Design Pattern</a></li>
     </ul>
-  </nav>  
+  </nav>
   <main>
     <h1>Checkbox Example (Two State)</h1>
     <p>This example implements the  <a href="../../../#checkbox">Checkbox Design Pattern</a> for a two state checkbox using <code>div</code> elements.</p>
@@ -37,8 +37,8 @@
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
 
       <div  id="ex1">
-        <h3>Sandwich Condiments</h3>
-        <div>
+        <h3 id="sc1">Sandwich Condiments</h3>
+        <div role="group" aria-labelledby="sc1">
           <ul class="checkboxes">
             <li><div role="checkbox" aria-checked="false" tabindex= "0">Lettuce</div></li>
             <li><div role="checkbox" aria-checked="true"  tabindex= "0">Tomato</div></li>
