--- a/examples/treeview/treeview-3/treeview-3a.html
+++ b/examples/treeview/treeview-3/treeview-3a.html
@@ -27,7 +27,7 @@
         <li><a href="https://github.com/w3c/aria-practices/projects/17">Related Issues</a></li>
         <li><a href="../../../#TreeView">Design Pattern</a></li>
       </ul>
-    </nav>  
+    </nav>
     <main>
       <h1>File Directory Treeview Example Using Computed Properties</h1>
       <p>
@@ -63,10 +63,10 @@
                 Projects
               </span>
               <ul role="group">
-                <li role="treeitem" class="doc">
+                <li role="treeitem" class="doc" aria-selected="false">
                   project-1.docx
                 </li>
-                <li role="treeitem" class="doc">
+                <li role="treeitem" class="doc" aria-selected="false">
                   project-2.docx
                 </li>
                 <li role="treeitem"
@@ -75,18 +75,18 @@
                     Project 3
                   </span>
                   <ul role="group">
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-3A.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-3B.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-3C.docx
                     </li>
                   </ul>
                 </li>
-                <li role="treeitem" class="doc">
+                <li role="treeitem" class="doc" aria-selected="false">
                   project-4.docx
                 </li>
                 <li role="treeitem"
@@ -95,22 +95,22 @@
                     Project 5
                   </span>
                   <ul role="group">
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-5A.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-5B.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-5C.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-5D.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-5E.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       project-5F.docx
                     </li>
                   </ul>
@@ -129,13 +129,13 @@
                     report-1
                   </span>
                   <ul role="group">
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-1A.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-1B.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-1C.docx
                     </li>
                   </ul>
@@ -146,16 +146,16 @@
                     report-2
                   </span>
                   <ul role="group">
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-2A.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-2B.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-2C.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-2D.docx
                     </li>
                   </ul>
@@ -166,16 +166,16 @@
                     report-3
                   </span>
                   <ul role="group">
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-3A.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-3B.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-3C.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       report-3D.docx
                     </li>
                   </ul>
@@ -194,13 +194,13 @@
                     letter-1
                   </span>
                   <ul>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-1A.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-1B.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-1C.docx
                     </li>
                   </ul>
@@ -211,16 +211,16 @@
                     letter-2
                   </span>
                   <ul role="group">
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-2A.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-2B.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-2C.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-2D.docx
                     </li>
                   </ul>
@@ -231,16 +231,16 @@
                     letter-3
                   </span>
                   <ul role="group">
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-3A.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-3B.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-3C.docx
                     </li>
-                    <li role="treeitem" class="doc">
+                    <li role="treeitem" class="doc" aria-selected="false">
                       letter-3D.docx
                     </li>
                   </ul>
@@ -283,7 +283,7 @@
           </thead>
           <tbody>
             <tr>
-              <th><kbd>Enter</kbd><br>or <kbd>Space</kbd></th>
+              <th><kbd>Enter</kbd><br></th>
               <td>
                 <ul>
                   <li>Performs the default action (e.g. onclick event) for the focused node.</li>
@@ -358,6 +358,60 @@
                 </ul>
               </td>
             </tr>
+            <tr>
+              <th><kbd>Space</kbd><br></th>
+              <td>
+                Toggles the selection state of the focused node.
+              </td>
+            </tr>
+            <tr>
+              <th>
+                <kbd>Shift</kbd> + <br/><kbd>Down Arrow</kbd>
+              </th>
+              <td>
+               Moves focus to and toggles the selection state of the next node.
+              </td>
+            </tr>
+            <tr>
+              <th>
+                <kbd>Shift</kbd> + <br/><kbd>Up Arrow</kbd>
+              </th>
+              <td>
+               Moves focus to and toggles the selection state of the previous node.
+              </td>
+            </tr>
+            <tr>
+              <th>
+                <kbd>Shift</kbd> + <br/><kbd>Space</kbd>
+              </th>
+              <td>
+               Selects contiguous nodes from the last selected node to the current node.
+              </td>
+            </tr>
+            <tr>
+              <th>
+                <kbd>Control</kbd> + <br/> <kbd>Shift</kbd> + <br/><kbd>Home</kbd>
+              </th>
+              <td>
+                 Selects the node with focus and all nodes up to the first node.
+              </td>
+            </tr>
+            <tr>
+              <th>
+                <kbd>Control</kbd> + <br/> <kbd>Shift</kbd> + <br/><kbd>End</kbd>
+              </th>
+              <td>
+                 Selects the node with focus and all nodes down to the last node.
+              </td>
+            </tr>
+            <tr>
+              <th>
+                <kbd>Control</kbd> + <br/><kbd>A</kbd>
+              </th>
+              <td>
+                 Selects all nodes in the tree. Optionally, if all nodes are selected, it can also unselect all nodes.
+              </td>
+            </tr>
           </tbody>
         </table>
   </section>
@@ -382,8 +436,8 @@
                 <ul>
                   <li>Identifies the <code>ul</code> element as a <code>tree</code> widget.</li>
                   <li>
-                    Because focus movement in the tree is managed with a 
-                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>, 
+                    Because focus movement in the tree is managed with a
+                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>,
                     the <code>tree</code> container does not need a <code>tabindex</code> attribute.
                   </li>
                 </ul>
@@ -449,6 +503,30 @@
                   <li>Applied only to <code>treeitem</code> elements that are parent nodes, i.e., they contain a <code>ul</code> with the <code>group</code> role.</li>
                   <li>Indicates the parent node is open, i.e., the descendant elements <strong>are</strong> visible.</li>
                   <li>The visual indication of the expanded state is synchronized by a CSS attribute selecter.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-selected=&quot;false&quot;</code></th>
+              <td><code>li</code></td>
+              <td>
+                <ul>
+                  <li>Applied only to <code>treeitem</code> elements that are end nodes, i.e., they are exist inside of <code>ul</code> element with the <code>group</code> role and does not have any child nodes.</li> <!--last edit-->
+                  <li>Indicates the item is <strong>not</strong> selected </li>
+                  <li>The visual indication of the collapsed state is synchronized by a CSS attribute selecter.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-selected=&quot;true&quot;</code></th>
+              <td><code>li</code></td>
+              <td>
+                <ul>
+                  <li>Applied only to <code>treeitem</code> elements that are child nodes, i.e., they are exist inside of <code>ul</code> element with the <code>group</code> role and does not have any child nodes.</li> <!--last edit-->
+                  <li>Indicates the item <strong>is</strong> selected </li>
+                  <li>The visual indication of the collapsed state is synchronized by a CSS attribute selecter.</li>
                 </ul>
               </td>
             </tr>
