--- a/examples/dialog-modal/alertdialog.html
+++ b/examples/dialog-modal/alertdialog.html
@@ -66,7 +66,7 @@
           <li>The accessible label for the alert dialog is set to its heading ("Confirmation").</li>
           <li>The dialog's prompt ("Are you sure...?") is referenced via <code>aria-describedby</code> to ensure that the user is immediately aware of the prompt.</li>
           <li>Focus is automatically set to the first focusable element inside the dialog, which is the "No" button. This is the least destructive action, and will prevent the user from accidentally confirming the dialog.</li>
-          <li>The user can dismiss the dialog with <kbd>Escape</kbd> at any time, or by selecting the "No" button.</li>
+          <li>The user can dismiss the dialog with <kbd>Escape</kbd> at any time, or by clicking the "No" button.</li>
           <li>Once the user has removed the contents of the notes <code>textarea</code>, clicking the "discard notes" button cannot do anything. To communicate this to the user, an alert with <code>role="alert"</code> is triggered.</li>
         </ol>
       </section>
