--- a/examples/dialog-modal/alertdialog.html
+++ b/examples/dialog-modal/alertdialog.html
@@ -10,11 +10,11 @@
     <script src="../js/highlight.pack.js"></script>
     <script src="../js/app.js"></script>
     <!-- js from the dialog-modal example -->
-    <script src="../js/utils.js" type="text/javascript"></script>
-    <script src="js/dialog.js" type="text/javascript"></script>
+    <script src="../js/utils.js"></script>
+    <script src="js/dialog.js"></script>
     <!--  js and css for this example. -->
     <link href="css/dialog.css" rel="stylesheet">
-    <script src="js/alertdialog.js" type="text/javascript"></script>
+    <script src="js/alertdialog.js"></script>
   </head>
 
   <body>
