--- a/examples/dialog-modal/alertdialog.html
+++ b/examples/dialog-modal/alertdialog.html
@@ -30,7 +30,13 @@
     <main aria-labelledby="main_label">
       <h1 id="main_label">Alert Dialog Example</h1>
       <p>The below example demonstrates the <a href="../../#alertdialog">design pattern for an alert dialog</a>. The <a href="../../#alert">design pattern for an alert</a> is also demonstrated to allow the user to experience the difference between the two patterns.</p>
-      <p>In this example, the "notes" <code>textarea</code> contains editable text that you are encouraged to modify. Pressing the "discard notes" button will trigger a confirmation dialog, but only if the notes field contains text. Clicking "yes" will remove all contents of the notes field, while clicking "no" or pressing escape will simply close the dialog. If the notes field does not contain any text, pressing the "discard nodes" button will trigger an alert notification that there is nothing to discard. This notification appears for 3 seconds, and then disappears, a pattern commonly referred to as a "toast notification."</p>
+      <p>User interactions for this interactive include:</p>
+      <ul>
+        <li>The "notes" <code>textarea</code> contains editable text that you are encouraged to modify.</li>
+        <li>Pressing the "discard notes" <code>button</code> will trigger a confirmation dialog, but only if the notes field contains text.</li>
+        <li>Clicking "yes" will remove all contents of the notes field, while clicking "no" or pressing escape will simply close the dialog.</li>
+        <li>If the notes field does not contain any text, pressing the "discard nodes" <code>button</code> will trigger an alert, notifying the user that there is nothing to discard. This notification appears for 3 seconds, and then disappears, a pattern commonly referred to as a "toast notification."</li>
+      </ul>
       <p>Similar examples include:</p>
       <ul>
         <li><a href="alert.html">Alert</a>: a basic alert.</li>
